Convert build system to Closure compiler.

--- a/test/index.html
+++ b/test/index.html
@@ -10,7 +10,9 @@
   <div id="qunit-fixture"></div>
   <script src="lib/qunit-1.12.0.js"></script>
   <script src="lib/jquery-1.10.2.js"></script>
-  <script src="../dist/data-layer-helper.raw.js"></script>
+  <script src="../third_party/closure-library/closure/goog/base.js"></script>
+  <script src="../src/plain/is_plain_object.js"></script>
+  <script src="../src/helper/helper.js"></script>
 
   <!-- New test files go here (in alphabetical order). -->
   <script src="expandKeyValue_test.js"></script>
