Fixed a but in the command processing code and renaimed the function from mutateValue_ to processCommand_ to fit better with the current processUpdate_ method. Updated tests accordingly.

--- a/test/unit.html
+++ b/test/unit.html
@@ -37,7 +37,7 @@
   <script src="isArray_test.js"></script>
   <script src="isPlainObject_test.js"></script>
   <script src="merge_test.js"></script>
-  <script src="mutateValue_test.js"></script>
+  <script src="processCommand_test.js"></script>
   <script src="processStates_test.js"></script>
   <script src="type_test.js"></script>
 
