Ensure new naming scheme matches old one, must rename current tests to avoid future conflicts

--- a/test/integration.html
+++ b/test/integration.html
@@ -27,7 +27,7 @@
   <script src="../dist/data-layer-helper.js"></script>
 
   <!-- New test files go here (in alphabetical order). -->
-  <script src="integration_test.js"></script>
+  <script src="integration_test_old.js"></script>
 
 </body>
 </html>
