--- a/test/unit.html
+++ b/test/unit.html
@@ -30,16 +30,16 @@
   <script src="../src/helper/helper.js"></script>
 
   <!-- New test files go here (in alphabetical order). -->
-  <script src="expandKeyValue_test.js"></script>
-  <script src="flatten_test.js"></script>
-  <script src="get_test.js"></script>
-  <script src="hasOwn_test.js"></script>
-  <script src="isArray_test.js"></script>
-  <script src="isPlainObject_test.js"></script>
-  <script src="merge_test.js"></script>
-  <script src="processCommand_test.js"></script>
-  <script src="processStates_test.js"></script>
-  <script src="type_test.js"></script>
+  <script src="expandKeyValue_test_old.js"></script>
+  <script src="flatten_test_old.js"></script>
+  <script src="get_test_old.js"></script>
+  <script src="hasOwn_test_old.js"></script>
+  <script src="isArray_test_old.js"></script>
+  <script src="isPlainObject_test_old.js"></script>
+  <script src="merge_test_old.js"></script>
+  <script src="processCommand_test_old.js"></script>
+  <script src="processStates_test_old.js"></script>
+  <script src="type_test_old.js"></script>
 
 </body>
 </html>
